Update README.md
Adding Kafdrop details